--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MeMix2</title>
+    <title>MeMix</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <h1>MeMix</h1>
+    <br>
+    <%=link_to 'Home', '/'%>
+    <%=link_to 'Profile', user_path(current_user) if current_user%>
+    <%=link_to 'Logout', '/logout' if current_user%>
+    <%=link_to 'Login', '/login' unless current_user%>
+    <%=link_to 'Create Account', new_user_path unless current_user%>
+    
+    
     <%= yield %>
   </body>
 </html>
+
