--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <h1>MeMix</h1>
     <br>
     <%=link_to 'Home', '/'%>
-    <%=link_to 'Profile', user_path(current_user) if current_user%>
+    <%=link_to 'Profile', user_mixes_path(current_user) if current_user%>
     <%=link_to 'Logout', '/logout' if current_user%>
     <%=link_to 'Login', '/login' unless current_user%>
     <%=link_to 'Create Account', new_user_path unless current_user%>
