--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'welcome/search'%>
 <%@results.each do |result|%>
-  <%=render_piece(result)%>
+  <%=render partial: 'contents/content', locals: {content: result}%>
   <%=render partial: 'mixes/form', locals: {media: result} if current_user%>
 <%end%>
