--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -1,14 +1,16 @@
-<%=form_with url: '/mixes', method: :post do |f|%>
-
+<%flash.each do |type, msg|%>
+   <div>
+    <%= msg %>
+  </div>
+<%end%>
+<%=form_for Mix.new, method: :post do |f|%>
   <input type="hidden" name="media" value="<%=media%>">
-  <%=fields_for Mix.new do |m|%>
-    Add To: <%=m.text_field 'title', list: 'title'%>
-  <%end%>
-  
+  <input type="hidden" name="lasturl" value="<%=request.url%>">
+    Add To: <%=f.text_field 'title', list: 'title', required: true%> 
   <datalist id="title">
   <%current_user.mixes.each do |m|%>
     <option value="<%=m.title%>"></option>
   <%end%>
   </datalist>
-  <%=f.submit 'Add'%>
+  <%=f.submit 'Add', data: { disable_with: "Added" }%>
 <%end%>
