nested mix view

--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -1,5 +1,5 @@
 <div class="mix">
-  <h2><%=mix.title%></h2>
+  <h3><%=link_to mix.title, user_mix_path(mix.user, mix)%></h3>
   <%mix.contents.each do |content|%>
     <%=render partial: 'contents/content', locals: {content: content}%>
   <%end%>
