--- a/app/views/mixes/index.html.erb
+++ b/app/views/mixes/index.html.erb
@@ -1,6 +1,6 @@
 <%=render partial: 'users/user', locals: {user: @user}%>
 
-<h2>Your mixes</h2>
+<h2>Mixes</h2>
 <%@mixes.each do |m|%>
   <div class="mix-container">
     <%=render partial: 'mix', locals: {mix: m}%>
