--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -2,5 +2,9 @@
   <%=f.label :title%>
   <%=f.text_field :title%>
   <%=f.label :description%>
-  <%=f.text_field :description%>
+  <%=f.text_area :description%>
+  <br>
+  <%@mix.contents.each do |c|%>
+    <%=render_piece(c)%>
+  <%end%>
 <%end%>
