--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -5,10 +5,12 @@
   <%=f.text_area :description%>
   <br>
   <%@mix.contents.each do |c|%>
+    
     <div id="<%=c.id%>">
     <%=render_piece(c)%>
-    <input type="hidden" name="contents[]" value="<%=c%>">
-    <input type="button" value="Remove from mix" onclick="if(confirm('This item and its notes will be removed from your mix. Are you sure?')) {deleteContent('<%=c.id%>')}">
+    <%=link_to "delete", content_path(c, mix_id: @mix.id, lasturl: request.url), method: :delete%>
+    <!-- <input type="hidden" name="mix[content][]" value="<%=c.attributes%>">
+    <input type="button" value="Remove from mix" onclick="if(confirm('This item and its notes will be removed from your mix. Are you sure?')) {deleteContent('<%=c.id%>')}"> -->
     </div>
   <%end%>
   <%=f.submit%>
