--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,2 +1,4 @@
-  <%=render_piece(content)%>
-  <%=render partial: 'mixes/add_to_form', locals: {media: content} if current_user%>
+  <div class="card-container">
+    <%=render_piece(content)%>
+    <%=render partial: 'mixes/add_to_form', locals: {media: content}%>
+  </div>
