--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -1,3 +1,9 @@
+<%if @mix.errors%>
+  <%@mix.errors.full_messages.each do |message|%>
+      <h4><%=message%></h4>
+  <%end%>
+<%end%>
+
 <%=form_for @mix do |f|%>
   <%=f.label :title%>
   <%=f.text_field :title%>
