--- a/app/views/mixes/_add_to_form.html.erb
+++ b/app/views/mixes/_add_to_form.html.erb
@@ -11,7 +11,7 @@
       <%=c.hidden_field :data_type, value: media[:data_type]%>
       <%=c.hidden_field :title, value: media[:title]%>
       <%media[:creators].each do |creator|%>
-        <%=c.hidden_field :creators, value: creator%>
+        <input type="hidden" name="content[creators][]" value="<%=creator%>">
       <%end%>
       <%=c.hidden_field :date, value: media[:date]%>
       <%=c.hidden_field :image, value: media[:image]%>
