--- a/app/views/contents/_movie.html.erb
+++ b/app/views/contents/_movie.html.erb
@@ -1,6 +1,12 @@
 
 <div class="card">
-  <h3><%=movie[:title]%> - <%=movie[:year]%> - <%=movie[:director]%></h3>
+  <h3><%=movie[:title]%> - <%=movie[:year]%> - 
+  <%if movie[:creators]%>
+    <%movie[:creators].each do |creator|%>
+      <h4><%=creator%></h4>
+    <%end%>
+  <%end%>
+  </h3>
   <a href="<%=movie[:url]%>" target="_blank"><img src="<%=movie[:image]%>" width="200px" alt="movie poster"></a>
   <p><%=movie[:description]%></p>
 </div>
