--- a/app/views/contents/_movie.html.erb
+++ b/app/views/contents/_movie.html.erb
@@ -1,6 +1,6 @@
 
 <div class="card">
-  <h3><%=movie[:title]%> - <%=movie[:year]%> - 
+  <h3><%=movie[:title]%> - <%=movie[:date]%>
   <%if movie[:creators]%>
     <%movie[:creators].each do |creator|%>
       <h4><%=creator%></h4>
