--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -13,6 +13,10 @@
   <%@mix.contents.each do |c|%>
     <%=render_piece(c)%>
     <%=link_to "Remove from mix", content_path(c, mix_id: @mix.id, lasturl: request.url), method: :delete%>
+     <%=f.fields_for :notes, c.notes do |note_fields|%>
+      <%=note_fields.text_area :text%>
+      <%=note_fields.hidden_field :content_id, value: c.id%>
+    <%end%>
     <%=f.fields_for :notes, @mix.notes.build do |note_fields|%>
       <%=note_fields.text_area :text%>
       <%=note_fields.hidden_field :content_id, value: c.id%>
