--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -14,14 +14,18 @@
     <%=render_piece(c)%>
     <%=link_to "Remove from mix", content_path(c, mix_id: @mix.id, lasturl: request.url), method: :delete%>
      <%=f.fields_for :notes, c.notes do |note_fields|%>
+      <%=note_fields.label "Edit note:"%>
       <%=note_fields.text_area :text%>
       <%=note_fields.hidden_field :content_id, value: c.id%>
+      <%=link_to "Delete note", note_path(note_fields.object.id, mix_id: @mix.id, lasturl: request.url), method: :delete%>
     <%end%>
     <%=f.fields_for :notes, @mix.notes.build do |note_fields|%>
+      <%=note_fields.label "New note:"%>
       <%=note_fields.text_area :text%>
       <%=note_fields.hidden_field :content_id, value: c.id%>
     <%end%>
-   
+  
   <%end%>
   <%=f.submit%>
 <%end%>
+
