--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -4,6 +4,9 @@
   <br>
   <%mix.contents.each do |content|%>
     <%=render partial: 'contents/content', locals: {content: content}%>
+    <%content.specific_notes(mix).each do |note|%>
+      <%=render partial: 'notes/note', locals: {note: note}%>
+    <%end%>
   <%end%>
   <%=no_contents(mix)%>
 </div>
