--- a/app/views/mixes/_form.html.erb
+++ b/app/views/mixes/_form.html.erb
@@ -13,7 +13,7 @@
   <%@mix.contents.each do |c|%>
     <%=render_piece(c)%>
     <%=link_to "Remove from mix", content_path(c, mix_id: @mix.id, lasturl: request.url), method: :delete%>
-    <%=f.fields_for :notes, @mix.notes.where(content_id: c.id) do |note_fields|%>
+    <%=f.fields_for :notes, c.specific_notes(@mix) do |note_fields|%>
       <%=note_fields.label "Edit note:"%>
       <%=note_fields.text_area :text%>
       <%=note_fields.hidden_field :content_id, value: c.id%>
