--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -1,3 +1,5 @@
+<%=render partial: 'likes/like', locals: {mix: mix}%>
+
 <div class="mix">
   <h3><%=link_to mix.title, user_mix_path(mix.user, mix)%> by <%=link_to mix.user.username, user_path(mix.user)%> <%=edit_link(mix)%></h3>
   <i><%=mix.description%></i>
