--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,3 +1,3 @@
 <div class="like">
-  <%=link_to "Like Mix", likes_path(info: {mix_id: mix.id, user_id: current_user.id}), method: :post%>
+  <%=button_to "Like Mix", likes_path(info: {mix_id: mix.id, user_id: current_user.id}), method: :post, data: { disable_with: "Liked"}%>
 </div>
