--- a/app/views/mixes/_add_to_form.html.erb
+++ b/app/views/mixes/_add_to_form.html.erb
@@ -14,7 +14,7 @@
         <%=c.hidden_field :title, value: media[:title]%>
         <%media[:creators].each do |creator|%>
           <input type="hidden" name="content[creators][]" value="<%=creator%>">
-        <%end%>
+        <%end unless media[:creators].nil?%>
         <%=c.hidden_field :date, value: media[:date]%>
         <%=c.hidden_field :image, value: media[:image]%>
         <%=c.hidden_field :url, value: media[:url]%>
