--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -10,9 +10,9 @@
     <%end%>
   <%end%>
   <%=no_contents(mix)%>
-  <div class="comments">
-    <%= turbo_stream_from "comments" %>
-    <%= turbo_frame_tag "comments" do %>
+  <div class="<%=mix.id%>comments">
+    <%= turbo_stream_from "#{mix.id}comments" %>
+    <%= turbo_frame_tag "#{mix.id}comments" do %>
       <%=render mix.comments%>
     <%end%>
   </div>
