--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,5 @@
-<%= turbo_frame_tag dom_id(comment) do %>
-  <%=comment.content%>
-<%end%>
+<div class="comment">
+  <%= turbo_frame_tag dom_id(comment) do %>
+    <%=comment.content%>
+  <%end%>
+</div>
