--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,6 +1,12 @@
+<%=render 'shared/flash'%>
 <%=form_for mix.comments.build, remote: true  do |f|%>
   <%=f.hidden_field :mix_id, value: mix.id%>
   <%=f.label "New Comment"%>
   <%=f.text_field :content%>
-  <%=f.submit%>
+  <%if current_user%>
+    <%=f.submit%>
+    
+  <%else%>
+    <%=button_to "Create Comment", '/login'%>
+  <%end%>
 <%end%>
