--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,12 +1,10 @@
-<%=render 'shared/flash'%>
-<%=form_for mix.comments.build, remote: true  do |f|%>
-  <%=f.hidden_field :mix_id, value: mix.id%>
-  <%=f.label "New Comment"%>
-  <%=f.text_field :content%>
-  <%if current_user%>
+<%if current_user%>
+  <%=form_for mix.comments.build, remote: true  do |f|%>
+    <%=f.hidden_field :mix_id, value: mix.id%>
+    <%=f.label "New Comment"%>
+    <%=f.text_field :content%>
     <%=f.submit%>
-    
-  <%else%>
-    <%=button_to "Create Comment", '/login'%>
   <%end%>
+<%else%>
+  <%=button_to "Login", login_path, method: :get%>
 <%end%>
