--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -6,5 +6,5 @@
     <%=f.submit%>
   <%end%>
 <%else%>
-  <%=button_to "Login", login_path, method: :get%>
+  <%=button_to "Login to add comments", login_path, method: :get%>
 <%end%>
