--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -5,6 +5,6 @@
     
     <%=button_to "Like Mix", likes_path(info: {mix_id: mix.id, user_id: current_user.id, lasturl: request.url}), method: :post%>
   <%else%>
-    <%=button_to "Like Mix", '/login'%>
+    <%=button_to "Like Mix", '/login', method: :get%>
   <%end%>
 </div>
