--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -9,13 +9,17 @@
       <%=render partial: 'notes/note', locals: {note: note}%>
     <%end%>
   <%end%>
+
   <%=no_contents(mix)%>
-  <div class="comments">
+  <div class="comments-container">
     <h3>Comments:</h3>
-    <%= turbo_stream_from "#{mix.id}comments" %>
-    <%= turbo_frame_tag "#{mix.id}comments" do %>
-      <%=render mix.comments%>
-    <%end%>
+      
+      <div class="comments">
+        <%= turbo_stream_from "#{mix.id}comments" %>
+        <%= turbo_frame_tag "#{mix.id}comments" do %>
+          <%=render mix.comments%>
+        <%end%>
+      </div>
+    <%= render partial: 'comments/new', locals: {mix: mix}%>
   </div>
-  <%= render partial: 'comments/new', locals: {mix: mix}%>
 </div>
