--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -2,7 +2,7 @@
   <%=form_for mix.comments.build, remote: true  do |f|%>
     <%=f.hidden_field :mix_id, value: mix.id%>
     <%=f.label "New Comment"%>
-    <%=f.rich_text_area :content, required: true%>
+    <%=f.rich_text_area :content, required: true, id: "trix#{mix.id}"%>
     <%=f.submit%>
   <%end%>
 <%else%>
