--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
         <h1>MeMix</h1>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-nav">
-          <%=link_to 'Home', '/', class: 'nav-item nav-link'%>
+        <div class="nav nav-tabs">
+          <%=link_to 'Home', '/', class: 'nav-item nav-link active' if request.fullpath == '/'%>
+          <%=link_to 'Home', '/', class: 'nav-item nav-link' if request.fullpath != '/'%>
           <%=link_to 'Profile', user_mixes_path(current_user), class: 'nav-item nav-link' if current_user%>
   
 
