--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <div class="blog-header">
-        <h1>MeMix</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">MeMix</h1>
+        </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="nav nav-tabs">
+        <div class="nav nav-tabs mx-auto">
           <%=link_to 'Home', '/', class: 'nav-item nav-link active' if request.fullpath == '/'%>
           <%=link_to 'Home', '/', class: 'nav-item nav-link' if request.fullpath != '/'%>
           <%=link_to 'Profile', user_mixes_path(current_user), class: 'nav-item nav-link' if current_user%>
