--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the contents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.add-to-form {
+  background-color: white;
+  position: sticky;
+  bottom: 0;
+}
