--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,4 +1,6 @@
   <div class="card-container">
-    <%=render_piece(content)%>
-    <%=render partial: 'mixes/add_to_form', locals: {media: content}%>
+    <div class="card">
+      <%=render_piece(content)%>
+      <%=render partial: 'mixes/add_to_form', locals: {media: content}%>
+    </div>
   </div>
