--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,14 +15,15 @@
  */
  @import "bootstrap";
  
-
- .card-container {
+  .mix-container {
+    overflow: scroll;
+  }
+ .card-container{
   display: inline-block;
   width: 350px;
   height: 400px;
   padding: 3px;
   margin: 1px;
- 
  }
  .card {
   width: 350px;
