--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,8 +1,16 @@
 // Place all the styles related to the contents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.contents {
+  height: 100%;
+  overflow-y: scroll;
+}
+
 .add-to-form {
   background-color: white;
-  position: sticky;
+  position: absolute;
   bottom: 0;
+  width: 100%;
+  margin: auto;
+  text-align: center;
 }
