--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,10 @@
 
 <%@results.each do |result|%>
   <%if result.respond_to?(:id)%>
-  <div class='card'>
-    <%=render partial: 'mixes/mix', locals: {mix: result}%>
+  <div class='card-container'>
+    <div class='card'>
+      <%=render partial: 'mixes/mix', locals: {mix: result}%>
+    </div>
   </div>
   <%else%>
     <%=render partial: 'contents/content', locals: {content: result}%>
