--- a/app/assets/stylesheets/mixes.scss
+++ b/app/assets/stylesheets/mixes.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the mixes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.mix-container {
+  overflow-y: scroll;
+  text-align: center;
+}
