--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,8 +31,13 @@
   overflow-y: scroll;
 }
 
-
 ::-webkit-scrollbar {
   width: 0px;  /* Remove scrollbar space */
   background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+trix-editor {
+  max-width: 80%;
+  margin: auto;
+  
 }
