--- a/app/views/contents/_art.html.erb
+++ b/app/views/contents/_art.html.erb
@@ -6,4 +6,4 @@
     <%end%>
   <%end%>
   <h5><%=art[:date]%></h5>
-  <a href="<%=art[:url]%>"target="_blank"><img src="<%=art[:image]%>" width="300px"></a>
+  <a href="<%=art[:url]%>"target="_blank"><img src="<%=art[:image]%>" width="100%"></a>
