--- a/app/views/contents/_movie.html.erb
+++ b/app/views/contents/_movie.html.erb
@@ -6,5 +6,5 @@
     <%end%>
   <%end%>
   </h3>
-  <a href="<%=movie[:url]%>" target="_blank"><img src="<%=movie[:image]%>" width="200px" alt="movie poster"></a>
+  <a href="<%=movie[:url]%>" target="_blank"><img src="<%=movie[:image]%>" width="100%" alt="movie poster"></a>
   <p><%=movie[:description]%></p>
