--- a/app/views/contents/_poem.html.erb
+++ b/app/views/contents/_poem.html.erb
@@ -1,1 +1,1 @@
-<iframe style="height: 380px; width: 350px"src="<%=poem[:url]%>" ></iframe>
+<iframe style="height: 380px; width: 100%"src="<%=poem[:url]%>" ></iframe>
