--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -2,8 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .contents {
+  background-color: rgb(150, 150, 150);
+  text-align: center;
+  padding: 8px;
+  
   height: 100%;
+  width: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .add-to-form {
