--- a/app/assets/stylesheets/mixes.scss
+++ b/app/assets/stylesheets/mixes.scss
@@ -3,5 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .mix-container {
   overflow-y: scroll;
+  overflow-x: hidden;
   text-align: center;
+  
 }
