--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,8 +37,7 @@
   background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
-trix-editor {
-  max-width: 80%;
-  margin: auto;
-  
+
+iframe {
+  border: none;
 }
