--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,6 +1,50 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+// .comment {
+//   width: 100%;
+ 
+// }
+.comments-container {
+  width: 80%;
+  margin: auto;
+ 
+}
+
+.comment {
+  width: 80%;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: left;
+  border: solid thin lightgrey;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.new_comment { 
+  border: solid thin lightgray;
+  margin-top: 30px !important;
+  max-width: 80%;
+  min-width: 250px;
+  margin: auto;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+trix-editor{
+  display: inline-block;
+  width: 90%;
+  min-height: 10px !important;
+}
+
+.comment-button {
+  display: inline-block;
+  border: none;
+  background-color: transparent;
+  bottom: 0;
+}
+
 .comment img {
   height: 50px !important
 }
