--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,21 @@
-<div class="comment">
-  <%= turbo_frame_tag dom_id(comment) do %>
-    <%=link_to(comment.user.username, user_path(comment.user), method: :get,'data-no-turbolink' => true)%>
-    <%=comment.content%>
-    <%=delete_comment(comment)%>
-  <%end%>
-</div>
+
+  
+    <%= turbo_frame_tag dom_id(comment) do %>
+    <div class="comment">
+      <div class="row">
+        <div class="col-sm">
+          <%=link_to(comment.user.username, user_path(comment.user), method: :get,'data-no-turbolink' => true)%>
+        </div>
+        <div class="col-sm">
+          <%=delete_comment(comment)%>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <%=comment.content%>
+        </div>
+        
+      </div>
+    </div>
+    <%end%>
+    
