--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -13,14 +13,15 @@
  
   <%=no_contents(mix)%>
   <div class="comments-container">
-  <h3>Comments:</h3>
-    
-    <div class="comments">
-      <%= turbo_stream_from "#{mix.id}comments" %>
-      <%= turbo_frame_tag "#{mix.id}comments" do %>
-        <%=render mix.comments%>
-      <%end%>
+    <h3>Comments:</h3>  
+      <div class="comments">
+        <%= turbo_stream_from "#{mix.id}comments" %>
+        <%= turbo_frame_tag "#{mix.id}comments" do %>
+          <%=render mix.comments%>
+        <%end%>
+      </div>
+    <div class="new-comment-container">
+      <%= render partial: 'comments/new', locals: {mix: mix}%>
     </div>
-  <%= render partial: 'comments/new', locals: {mix: mix}%>
   </div>
 </div>
