using ul instead of div because of errors

--- a/app/views/welcome/_results.html.erb
+++ b/app/views/welcome/_results.html.erb
@@ -1,4 +1,5 @@
-<div class="album">
+<ul class="album py-5 bg-light">
+
   <%results.each do |result|%>
     <div class='card-container'>
       <div class='card'>
@@ -6,4 +7,5 @@
       </div>
     </div>
   <%end%>
-</div>
+ 
+</ul>
