--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,6 +1,11 @@
 // Place all the styles related to the contents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.content-container {
+  width: 100%;
+  height: 90%;
+}
+
 .contents {
   background-color: rgb(238, 238, 238);
   text-align: center;
@@ -15,10 +20,10 @@
 .add-to-form {
   color: rgb(37, 37, 37);
   background-color: rgb(204, 204, 204);
-  position: absolute;
+  
   bottom: 0;
   width: 100%;
-  margin: auto;
+  // margin: auto;
   text-align: center;
   padding: 3px;
 }
