--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,5 +1,6 @@
-
-    <div class="contents">
-      <%=render_piece(content)%>
-    </div>
-    <%=render partial: 'mixes/add_to_form', locals: {media: content}%>
+<div class="content-container">
+  <div class="contents">
+    <%=render_piece(content)%>
+  </div>
+  <%=render partial: 'mixes/add_to_form', locals: {media: content}%>
+</div>
