--- a/app/views/mixes/index.html.erb
+++ b/app/views/mixes/index.html.erb
@@ -1,10 +1,12 @@
 <%=render partial: 'users/user', locals: {user: @user}%>
 
 <h2>Mixes  <%=new_link%></h2> 
-<%@mixes.each do |m|%>
-  <div class="card-container">
-    <div class='card'>
-      <%=render partial: 'mix', locals: {mix: m}%>
+<div class="album py-5 bg-light">
+  <%@mixes.each do |m|%>
+    <div class="card-container">
+      <div class="card">
+        <%=render partial: 'mix', locals: {mix: m}%>
+      </div>
     </div>
-  </div>
-<%end%>
+  <%end%>
+</div>
