--- a/app/views/welcome/_results.html.erb
+++ b/app/views/welcome/_results.html.erb
@@ -1,4 +1,4 @@
-<ul class="album py-5 bg-light">
+<div class="album py-5 bg-light">
 
   <%results.each do |result|%>
     <div class='card-container'>
@@ -8,4 +8,4 @@
     </div>
   <%end%>
  
-</ul>
+</div>
