--- a/app/views/mixes/_mix.html.erb
+++ b/app/views/mixes/_mix.html.erb
@@ -1,4 +1,6 @@
-<%=edit_link(mix)%><%=delete_link(mix)%>
+<div>
+  <%=edit_link(mix)%><%=delete_link(mix)%>
+</div>
 <div class="mix-container">
   <h3><%=link_to mix.title, user_mix_path(mix.user, mix)%> by <%=link_to mix.user.username, user_path(mix.user)%></h3>
   <%=render partial: 'likes/like', locals: {mix: mix}%>
