--- a/app/views/mixes/index.html.erb
+++ b/app/views/mixes/index.html.erb
@@ -1,7 +1,7 @@
 <%=render partial: 'users/user', locals: {user: @user}%>
 
 <h2>Mixes  <%=new_link%></h2> 
-<div class="album py-5 bg-light">
+<div class="album py-5">
   <%@mixes.each do |m|%>
     <div class="card-container">
       <div class="card">
