--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,2 +1,16 @@
-<h2><%=user.username%></h2>
 
+<div class="container mt-5 d-flex justify-content-center">
+    <div class="card p-3">
+        <div class="d-flex align-items-center">
+            <div class="image"> <img src="<%=user.image%>" class="rounded" width="155"> </div>
+            <div class="ml-3 w-100">
+                <h4 class="mb-0 mt-0"><%=user.username%></h4>
+                <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
+                    <div class="d-flex flex-column"> <span class="articles">Mixes</span> <span class="number1"><%=user.mixes.count%></span> </div>
+                    <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2">XX</span> </div>
+                </div>
+                <div class="button mt-2 d-flex flex-row align-items-center"><button class="btn btn-sm btn-primary w-100 ml-2">Follow</button> </div>
+            </div>
+        </div>
+    </div>
+</div>
