--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,5 @@
-
 <div class="container mt-5 d-flex justify-content-center">
-    <div class="card p-3">
+    <div class="card p-3" style="height: 200px !important">
         <div class="d-flex align-items-center">
             <div class="image"> <img src="<%=user.image%>" class="rounded" width="155"> </div>
             <div class="ml-3 w-100">
