--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container col-md-12">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center title bg-light">MeMix</h1>
+          <h1 class="text-center title bg-light">Memix</h1>
         </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
