--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,13 @@
-<h3>Feeling mixed up? Create an account!</h3>
-<%=render partial: 'errors', locals: {user: @user}%>
-  <%=form_for @user do |f|%>
-    <%=f.label :username%>
-    <%=f.text_field :username%> <br>
-    <%=f.label :email%>
-    <%=f.text_field :email%> <br>
-    <%=f.label :password%>
-    <%=f.password_field :password%> <br>
-    <%=f.label :password_confirmation%>
-    <%=f.password_field :password_confirmation%> <br>
-    <%=f.submit%>
-  <%end%>
+<div class="form-signin">
+  <div class="card">
+  <h3>Feeling mixed up? Create an account!</h3>
+    <%=render partial: 'errors', locals: {user: @user}%>
+      <%=form_for @user do |f|%>
+        <%=f.text_field :username, class:"form-control", placeholder: "Memix Username" %> <br>
+        <%=f.text_field :email, class:"form-control", placeholder: "Your Email" %> <br>
+        <%=f.password_field :password, class:"form-control", placeholder: "New Password" %> <br>
+        <%=f.password_field :password_confirmation, class:"form-control", placeholder: "Password Confirmation" %> <br>
+        <%=f.submit%>
+      <%end%>
+  </div>
+</div>
