--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,5 +62,8 @@ iframe {
 .form-signin {
   padding-top: 50px;
   text-align: center;
-  text-justify: center;
+}
+.form-signin .card{
+  margin: auto;
+
 }
