--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.image {
+  width: 160px;
+}
+.edit-user-image .row{
+  width: 160px;
+}
+
+.edit-user-image input {
+  display: inline-block;
+  font-size: 5px;
+  padding: 0;
+}
