--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,17 @@
 <div class="container mt-5 d-flex justify-content-center">
     <div class="card p-3" style="height: 200px !important">
         <div class="d-flex align-items-center">
-            <div class="image"> <img src="<%=user.image%>" class="rounded" width="155"> </div>
+           
+            <div class="image">
+                <%if user.avatar.attached?%>
+                    <img src="<%=(url_for(user.avatar))%>">
+                <%else%>
+                    <img src="<%=user.image%>" class="rounded" width="155">
+                <%end%>
+                <%if user == current_user%>
+                    <%=link_to "Edit Profile", edit_user_path(user)%>
+                <%end%>
+             </div>
             <div class="ml-3 w-100">
                 <h4 class="mb-0 mt-0"><%=user.username%></h4>
                 <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
@@ -10,6 +20,8 @@
                 </div>
                 <div class="button mt-2 d-flex flex-row align-items-center"><button class="btn btn-sm btn-primary w-100 ml-2">Follow</button> </div>
             </div>
+            <br>
+             
         </div>
     </div>
 </div>
