--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5 d-flex justify-content-center">
+<div class="container mt-5 d-flex justify-content-center user-container">
     <div class="card p-3" style="height: 200px !important">
         <div class="d-flex align-items-center">
            
@@ -12,9 +12,17 @@
                 <h4 class="mb-0 mt-0"><%=user.username%></h4>
                 <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
                     <div class="d-flex flex-column"> <span class="articles">Mixes</span> <span class="number1"><%=user.mixes.count%></span> </div>
-                    <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2">XX</span> </div>
+                    <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2"><%=user.followed_by.count%></span> </div>
+                    <div class="d-flex flex-column"> <span class="followers">Following</span> <span class="number2"><%=user.followed_users.count%></span> </div>
                 </div>
-                <div class="button mt-2 d-flex flex-row align-items-center"><button class="btn btn-sm btn-primary w-100 ml-2">Follow</button> </div>
+                <div class="button mt-2 d-flex flex-row align-items-center">
+                <%= form_for FollowRelationship.new do |f| %>
+                    <%=f.hidden_field :follower_id, value: current_user.id%>
+                    <%=f.hidden_field :followed_id, value: params[:user_id]%>
+                    <%=f.submit "Follow", class:"btn btn-sm btn-primary w-100 ml-2"%>
+                <%end%>
+                </div>
+                
             </div>
             <br>
              
