--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,6 @@
 <div class="container mt-5 d-flex justify-content-center user-container">
     <div class="card p-3" style="height: 200px !important">
         <div class="d-flex align-items-center">
-           
             <div class="image">
                 <%=profile_image(user)%>
                 <%if user == current_user%>
@@ -16,11 +15,18 @@
                     <div class="d-flex flex-column"> <span class="followers">Following</span> <span class="number2"><%=user.followed_users.count%></span> </div>
                 </div>
                 <div class="button mt-2 d-flex flex-row align-items-center">
-                <%= form_for FollowRelationship.new do |f| %>
-                    <%=f.hidden_field :follower_id, value: current_user.id%>
+                <%if User.find(params[:user_id]).followed_by.include?(current_user)%>
+                    <%=form_for current_user.follow_relationships.find_by(followed_id: params[:user_id]), method: :delete do |f|%>
                     <%=f.hidden_field :followed_id, value: params[:user_id]%>
-                    <%=f.submit "Follow", class:"btn btn-sm btn-primary w-100 ml-2"%>
-                <%end%>
+                    <%=f.submit "Unfollow", class:"btn btn-sm btn-primary w-100 ml-2"%>
+      <%end%>
+    <%else%>
+      <%=form_for FollowRelationship.new do |f|%>
+        <%=f.hidden_field :follower_id, value: current_user.id%>
+         <%=f.hidden_field :followed_id, value: params[:user_id]%>
+         <%=f.submit "Follow", class:"btn btn-sm btn-primary w-100 ml-2"%>
+     <% end%>
+    <%end%>
                 </div>
                 
             </div>
