--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -15,21 +15,30 @@
                     <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2"><%=user.followed_by.count%></span> </div>
                     <div class="d-flex flex-column"> <span class="followers">Following</span> <span class="number2"><%=user.followed_users.count%></span> </div>
                 </div>
-                <div class="button mt-2 d-flex flex-row align-items-center">
-                <%if User.find(params[:user_id]).followed_by.include?(current_user)%>
-                    <%=form_for current_user.follow_relationships.find_by(followed_id: params[:user_id]), method: :delete do |f|%>
-                        <%=f.hidden_field :followed_id, value: params[:user_id]%>
-                        <%=f.submit "Unfollow", class:"btn btn-sm btn-primary w-100 ml-2"%>
+                
+                <%if current_user%>
+                    <%if User.find(params[:user_id]).followed_by.include?(current_user)%>
+                        <%=form_for current_user.follow_relationships.find_by(followed_id: params[:user_id]), method: :delete do |f|%>
+                            <%=f.hidden_field :followed_id, value: params[:user_id]%>
+                            <div class="button mt-2 d-flex flex-row align-items-center">
+                                <%=f.submit "Unfollow", class:"btn btn-sm btn-primary w-100"%>
+                            </div>
+                        <%end%>
+                    <%else%>
+                        <%=form_for FollowRelationship.new do |f|%>
+                            <%=f.hidden_field :follower_id, value: current_user.id%>
+                            <%=f.hidden_field :followed_id, value: params[:user_id]%>
+                            <div class="button mt-2 d-flex flex-row align-items-center">
+                                <%=f.submit "Follow", class:"btn btn-sm btn-primary w-100"%>
+                            </div>
+                        <% end%>
                     <%end%>
                 <%else%>
-                    <%=form_for FollowRelationship.new do |f|%>
-                        <%=f.hidden_field :follower_id, value: current_user.id%>
-                        <%=f.hidden_field :followed_id, value: params[:user_id]%>
-                        <%=f.submit "Follow", class:"btn btn-sm btn-primary w-100 ml-2"%>
-                    <% end%>
-                <%end%>
-                </div>
-                
+                  <div class="button mt-2 d-flex flex-row align-items-center">
+                    <%=link_to 'Follow', '/login',class: "btn btn-sm btn-primary w-100"%>
+                  </div>
+                <%end%> 
+             
             </div>
             <br>
              
